# MS-Authentication

./: .env  .gitinore  docker-compose.yml  pyproject.toml
app/: auth_user.py  depends.py  main.py  routes.py  schemas.py
app/db/: connection.py  models.py
migrations/versions/: 08d1e09ac2e3_add_user_table.py
